kernel with csv import file

--- a/Supervised ML Model.ipynb
+++ b/Supervised ML Model.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "4e0017ee",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "695ae6cb",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "4              NaN     aggressive  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "76b5bae8",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "11         4.864521      aggressive  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "20db54ad",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "65a66a84",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,6 @@
        "      <th>gender</th>\n",
        "      <th>temperature_avg</th>\n",
        "      <th>aggressiveness</th>\n",
-       "      <th>date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -494,7 +493,6 @@
        "      <td>undefined</td>\n",
        "      <td>-1.114768</td>\n",
        "      <td>aggressive</td>\n",
-       "      <td>2006-07-23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -508,7 +506,6 @@
        "      <td>male</td>\n",
        "      <td>4.228540</td>\n",
        "      <td>aggressive</td>\n",
-       "      <td>2006-12-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -522,7 +519,6 @@
        "      <td>male</td>\n",
        "      <td>5.478175</td>\n",
        "      <td>aggressive</td>\n",
-       "      <td>2006-12-17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -536,7 +532,6 @@
        "      <td>male</td>\n",
        "      <td>-1.652156</td>\n",
        "      <td>not aggressive</td>\n",
-       "      <td>2006-12-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -550,19 +545,18 @@
        "      <td>male</td>\n",
        "      <td>4.864521</td>\n",
        "      <td>aggressive</td>\n",
-       "      <td>2006-12-31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  created_at         id         lng        lat  \\\n",
-       "1  2006-07-23 21:52:30+00:00    13275.0  -73.949582  40.650104   \n",
-       "7  2006-12-14 01:39:10+00:00  1092823.0 -122.419420  37.774930   \n",
-       "8  2006-12-17 19:43:09+00:00  1278023.0  -79.791980  36.072640   \n",
-       "9  2006-12-21 01:39:01+00:00  1455543.0 -121.805790  38.004920   \n",
-       "11 2006-12-31 10:47:25+00:00  1893063.0   -1.902691  52.479699   \n",
+       "                   created_at         id         lng        lat  \\\n",
+       "1   2006-07-23 21:52:30+00:00    13275.0  -73.949582  40.650104   \n",
+       "7   2006-12-14 01:39:10+00:00  1092823.0 -122.419420  37.774930   \n",
+       "8   2006-12-17 19:43:09+00:00  1278023.0  -79.791980  36.072640   \n",
+       "9   2006-12-21 01:39:01+00:00  1455543.0 -121.805790  38.004920   \n",
+       "11  2006-12-31 10:47:25+00:00  1893063.0   -1.902691  52.479699   \n",
        "\n",
        "                                      topic  sentiment  stance     gender  \\\n",
        "1                          Weather Extremes   0.575777       0  undefined   \n",
@@ -571,15 +565,15 @@
        "9                          Weather Extremes   0.650960       0       male   \n",
        "11                         Weather Extremes   0.670905       0       male   \n",
        "\n",
-       "    temperature_avg  aggressiveness        date  \n",
-       "1         -1.114768      aggressive  2006-07-23  \n",
-       "7          4.228540      aggressive  2006-12-14  \n",
-       "8          5.478175      aggressive  2006-12-17  \n",
-       "9         -1.652156  not aggressive  2006-12-21  \n",
-       "11         4.864521      aggressive  2006-12-31  "
+       "    temperature_avg  aggressiveness  \n",
+       "1         -1.114768      aggressive  \n",
+       "7          4.228540      aggressive  \n",
+       "8          5.478175      aggressive  \n",
+       "9         -1.652156  not aggressive  \n",
+       "11         4.864521      aggressive  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "02b002b4",
    "metadata": {},
    "outputs": [
@@ -732,7 +726,7 @@
        "11         4.864521      aggressive  2006-12-31  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "0f6b733c",
    "metadata": {},
    "outputs": [],
@@ -758,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "230a8f8c",
    "metadata": {},
    "outputs": [],
@@ -769,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "7a8201d9",
    "metadata": {},
    "outputs": [],
@@ -780,7 +774,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "id": "44e7e17c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "76771963",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1188,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,6 +1197,27 @@
     "# Encode topic, gender, and aggressiveness to numerical values\n",
     "cc_twitter_df = pd.get_dummies(cc_twitter_date_df, columns=['topic', 'gender', 'aggressiveness'])\n",
     "cc_twitter_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a125c844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import cleaned dataframe back into PGAdmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7d4c95f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import cleaned dataframe as a CSV file\n",
+    "cc_twitter_df.to_csv(\"../climate_change_twitter_cleaned.csv\")"
    ]
   },
   {
