updating kernel with csv outport updates

--- a/Supervised ML Model.ipynb
+++ b/Supervised ML Model.ipynb
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a82b284e",
+   "id": "05f90bb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
    "outputs": [],
    "source": [
     "# Import cleaned dataframe as a CSV file\n",
-    "cc_twitter_df.to_csv(\"../climate_change_twitter_cleaned.csv\")"
+    "cc_twitter_date_df.to_csv(\"../climate_change_twitter_cleaned.csv\")"
    ]
   },
   {
