minor changes to model

--- a/Supervised ML Model (Removed LAT and LNG).ipynb
+++ b/Supervised ML Model (Removed LAT and LNG).ipynb
@@ -2928,7 +2928,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the X features\n",
+    "#Drop lat\n",
     "cc_twitter_df_no_location = cc_twitter_df.drop([\"lat\"], axis=1)"
    ]
   },
@@ -2949,6 +2949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the X features\n",
     "X = cc_twitter_df_no_location.drop([\"stance\"], axis=1)"
    ]
   },
