updating ml model versions without sentiment

--- a/Supervised ML Model (Removed Temperature Avg).ipynb
+++ b/Supervised ML Model (Removed Temperature Avg).ipynb
@@ -800,7 +800,7 @@
    "outputs": [],
    "source": [
     "# Drop ID column; it does not contain useful information for the model\n",
-    "cc_twitter_date_df = cc_twitter_date_df.drop(labels=[\"id\", \"temperature_avg\"], axis=1)"
+    "cc_twitter_date_df = cc_twitter_date_df.drop(labels=[\"id\", \"temperature_avg\", \"sentiment\"], axis=1)"
    ]
   },
   {
@@ -853,7 +853,6 @@
        "      <th></th>\n",
        "      <th>lng</th>\n",
        "      <th>lat</th>\n",
-       "      <th>sentiment</th>\n",
        "      <th>stance</th>\n",
        "      <th>date</th>\n",
        "      <th>topic_Donald Trump versus Science</th>\n",
@@ -878,7 +877,6 @@
        "      <th>1</th>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
-       "      <td>0.575777</td>\n",
        "      <td>0</td>\n",
        "      <td>20060723</td>\n",
        "      <td>0</td>\n",
@@ -901,7 +899,6 @@
        "      <th>7</th>\n",
        "      <td>-122.419420</td>\n",
        "      <td>37.774930</td>\n",
-       "      <td>-0.544195</td>\n",
        "      <td>0</td>\n",
        "      <td>20061214</td>\n",
        "      <td>0</td>\n",
@@ -924,7 +921,6 @@
        "      <th>8</th>\n",
        "      <td>-79.791980</td>\n",
        "      <td>36.072640</td>\n",
-       "      <td>-0.565028</td>\n",
        "      <td>2</td>\n",
        "      <td>20061217</td>\n",
        "      <td>0</td>\n",
@@ -947,7 +943,6 @@
        "      <th>9</th>\n",
        "      <td>-121.805790</td>\n",
        "      <td>38.004920</td>\n",
-       "      <td>0.650960</td>\n",
        "      <td>0</td>\n",
        "      <td>20061221</td>\n",
        "      <td>0</td>\n",
@@ -970,7 +965,6 @@
        "      <th>11</th>\n",
        "      <td>-1.902691</td>\n",
        "      <td>52.479699</td>\n",
-       "      <td>0.670905</td>\n",
        "      <td>0</td>\n",
        "      <td>20061231</td>\n",
        "      <td>0</td>\n",
@@ -993,7 +987,6 @@
        "      <th>12</th>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
-       "      <td>-0.567821</td>\n",
        "      <td>0</td>\n",
        "      <td>20070106</td>\n",
        "      <td>0</td>\n",
@@ -1016,7 +1009,6 @@
        "      <th>15</th>\n",
        "      <td>-0.125740</td>\n",
        "      <td>51.508530</td>\n",
-       "      <td>-0.531149</td>\n",
        "      <td>0</td>\n",
        "      <td>20070108</td>\n",
        "      <td>0</td>\n",
@@ -1039,7 +1031,6 @@
        "      <th>21</th>\n",
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
-       "      <td>-0.162596</td>\n",
        "      <td>0</td>\n",
        "      <td>20070110</td>\n",
        "      <td>0</td>\n",
@@ -1062,7 +1053,6 @@
        "      <th>22</th>\n",
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
-       "      <td>-0.162596</td>\n",
        "      <td>0</td>\n",
        "      <td>20070110</td>\n",
        "      <td>0</td>\n",
@@ -1085,7 +1075,6 @@
        "      <th>23</th>\n",
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
-       "      <td>0.048920</td>\n",
        "      <td>1</td>\n",
        "      <td>20070111</td>\n",
        "      <td>0</td>\n",
@@ -1109,17 +1098,17 @@
        "</div>"
       ],
       "text/plain": [
-       "           lng        lat  sentiment  stance      date  \\\n",
-       "1   -73.949582  40.650104   0.575777       0  20060723   \n",
-       "7  -122.419420  37.774930  -0.544195       0  20061214   \n",
-       "8   -79.791980  36.072640  -0.565028       2  20061217   \n",
-       "9  -121.805790  38.004920   0.650960       0  20061221   \n",
-       "11   -1.902691  52.479699   0.670905       0  20061231   \n",
-       "12  -73.949582  40.650104  -0.567821       0  20070106   \n",
-       "15   -0.125740  51.508530  -0.531149       0  20070108   \n",
-       "21   -0.127647  51.507322  -0.162596       0  20070110   \n",
-       "22   -0.127647  51.507322  -0.162596       0  20070110   \n",
-       "23   -0.127647  51.507322   0.048920       1  20070111   \n",
+       "           lng        lat  stance      date  \\\n",
+       "1   -73.949582  40.650104       0  20060723   \n",
+       "7  -122.419420  37.774930       0  20061214   \n",
+       "8   -79.791980  36.072640       2  20061217   \n",
+       "9  -121.805790  38.004920       0  20061221   \n",
+       "11   -1.902691  52.479699       0  20061231   \n",
+       "12  -73.949582  40.650104       0  20070106   \n",
+       "15   -0.125740  51.508530       0  20070108   \n",
+       "21   -0.127647  51.507322       0  20070110   \n",
+       "22   -0.127647  51.507322       0  20070110   \n",
+       "23   -0.127647  51.507322       1  20070111   \n",
        "\n",
        "    topic_Donald Trump versus Science  topic_Global stance  \\\n",
        "1                                   0                    0   \n",
@@ -1300,7 +1289,6 @@
        "      <th></th>\n",
        "      <th>lng</th>\n",
        "      <th>lat</th>\n",
-       "      <th>sentiment</th>\n",
        "      <th>date</th>\n",
        "      <th>topic_Donald Trump versus Science</th>\n",
        "      <th>topic_Global stance</th>\n",
@@ -1324,7 +1312,6 @@
        "      <th>1</th>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
-       "      <td>0.575777</td>\n",
        "      <td>20060723</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1346,7 +1333,6 @@
        "      <th>7</th>\n",
        "      <td>-122.419420</td>\n",
        "      <td>37.774930</td>\n",
-       "      <td>-0.544195</td>\n",
        "      <td>20061214</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1368,7 +1354,6 @@
        "      <th>8</th>\n",
        "      <td>-79.791980</td>\n",
        "      <td>36.072640</td>\n",
-       "      <td>-0.565028</td>\n",
        "      <td>20061217</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1390,7 +1375,6 @@
        "      <th>9</th>\n",
        "      <td>-121.805790</td>\n",
        "      <td>38.004920</td>\n",
-       "      <td>0.650960</td>\n",
        "      <td>20061221</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1412,7 +1396,6 @@
        "      <th>11</th>\n",
        "      <td>-1.902691</td>\n",
        "      <td>52.479699</td>\n",
-       "      <td>0.670905</td>\n",
        "      <td>20061231</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1435,26 +1418,19 @@
        "</div>"
       ],
       "text/plain": [
-       "           lng        lat  sentiment      date  \\\n",
-       "1   -73.949582  40.650104   0.575777  20060723   \n",
-       "7  -122.419420  37.774930  -0.544195  20061214   \n",
-       "8   -79.791980  36.072640  -0.565028  20061217   \n",
-       "9  -121.805790  38.004920   0.650960  20061221   \n",
-       "11   -1.902691  52.479699   0.670905  20061231   \n",
+       "           lng        lat      date  topic_Donald Trump versus Science  \\\n",
+       "1   -73.949582  40.650104  20060723                                  0   \n",
+       "7  -122.419420  37.774930  20061214                                  0   \n",
+       "8   -79.791980  36.072640  20061217                                  0   \n",
+       "9  -121.805790  38.004920  20061221                                  0   \n",
+       "11   -1.902691  52.479699  20061231                                  0   \n",
        "\n",
-       "    topic_Donald Trump versus Science  topic_Global stance  \\\n",
-       "1                                   0                    0   \n",
-       "7                                   0                    0   \n",
-       "8                                   0                    0   \n",
-       "9                                   0                    0   \n",
-       "11                                  0                    0   \n",
-       "\n",
-       "    topic_Ideological Positions on Global Warming  \\\n",
-       "1                                               0   \n",
-       "7                                               1   \n",
-       "8                                               0   \n",
-       "9                                               0   \n",
-       "11                                              0   \n",
+       "    topic_Global stance  topic_Ideological Positions on Global Warming  \\\n",
+       "1                     0                                              0   \n",
+       "7                     0                                              1   \n",
+       "8                     0                                              0   \n",
+       "9                     0                                              0   \n",
+       "11                    0                                              0   \n",
        "\n",
        "    topic_Impact of Resource Overconsumption  \\\n",
        "1                                          0   \n",
@@ -1629,7 +1605,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6388894052833094"
+       "0.5628153160264542"
       ]
      },
      "execution_count": 25,
@@ -1655,11 +1631,11 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       0.45      0.56      0.84      0.50      0.69      0.46    248765\n",
-      "          1       0.91      0.67      0.80      0.77      0.73      0.53    986618\n",
-      "          2       0.22      0.69      0.82      0.33      0.75      0.55     91502\n",
+      "          0       0.37      0.49      0.80      0.42      0.63      0.38    248765\n",
+      "          1       0.88      0.60      0.77      0.71      0.68      0.45    986618\n",
+      "          2       0.17      0.60      0.78      0.26      0.69      0.46     91502\n",
       "\n",
-      "avg / total       0.77      0.65      0.81      0.69      0.73      0.52   1326885\n",
+      "avg / total       0.74      0.58      0.78      0.63      0.67      0.44   1326885\n",
       "\n"
      ]
     }
@@ -1679,25 +1655,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sentiment: (0.3026776051398732)\n",
-      "date: (0.2583224962857548)\n",
-      "lng: (0.17584673720295702)\n",
-      "lat: (0.1714225240761456)\n",
-      "topic_Donald Trump versus Science: (0.01873713272111674)\n",
-      "topic_Weather Extremes: (0.013313915714974532)\n",
-      "topic_Global stance: (0.011827553861833474)\n",
-      "topic_Importance of Human Intervantion: (0.005420946410298411)\n",
-      "aggressiveness_aggressive: (0.0048910758861118375)\n",
-      "aggressiveness_not aggressive: (0.00468787669916816)\n",
-      "topic_Significance of Pollution Awareness Events: (0.004503565986844036)\n",
-      "topic_Undefined / One Word Hashtags: (0.004434728275748335)\n",
-      "topic_Ideological Positions on Global Warming: (0.004415884006062255)\n",
-      "topic_Seriousness of Gas Emissions: (0.0037872893730733228)\n",
-      "gender_male: (0.0037398747586842706)\n",
-      "topic_Politics: (0.0036957245492218855)\n",
-      "gender_female: (0.0035941511189370307)\n",
-      "topic_Impact of Resource Overconsumption: (0.0030027548611436423)\n",
-      "gender_undefined: (0.0016781630720516323)\n"
+      "date: (0.43794996096068295)\n",
+      "lng: (0.23714570602250784)\n",
+      "lat: (0.23213119048359854)\n",
+      "topic_Donald Trump versus Science: (0.02222462742431562)\n",
+      "topic_Weather Extremes: (0.016274413417455127)\n",
+      "topic_Global stance: (0.01048830565855808)\n",
+      "aggressiveness_aggressive: (0.005508922712698946)\n",
+      "aggressiveness_not aggressive: (0.0051250561052439475)\n",
+      "topic_Ideological Positions on Global Warming: (0.005016453976160004)\n",
+      "topic_Undefined / One Word Hashtags: (0.004549844624459598)\n",
+      "topic_Importance of Human Intervantion: (0.004027468088199164)\n",
+      "topic_Seriousness of Gas Emissions: (0.003918656634896995)\n",
+      "topic_Significance of Pollution Awareness Events: (0.0032599346427569405)\n",
+      "gender_male: (0.003113297591610033)\n",
+      "gender_female: (0.0029121343508747874)\n",
+      "topic_Politics: (0.0026617168267096913)\n",
+      "topic_Impact of Resource Overconsumption: (0.0025085088742168005)\n",
+      "gender_undefined: (0.0011838016050550247)\n"
      ]
     }
    ],
