--- a/Supervised ML Model (Removed Topics).ipynb
+++ b/Supervised ML Model (Removed Topics).ipynb
@@ -771,7 +771,7 @@
    "outputs": [],
    "source": [
     "# Drop ID and topic columns\n",
-    "cc_twitter_date_df = cc_twitter_date_df.drop(labels=[\"id\", \"topic\"], axis=1)"
+    "cc_twitter_date_df = cc_twitter_date_df.drop(labels=[\"id\", \"topic\", \"sentiment\"], axis=1)"
    ]
   },
   {
@@ -824,7 +824,6 @@
        "      <th></th>\n",
        "      <th>lng</th>\n",
        "      <th>lat</th>\n",
-       "      <th>sentiment</th>\n",
        "      <th>stance</th>\n",
        "      <th>temperature_avg</th>\n",
        "      <th>date</th>\n",
@@ -840,7 +839,6 @@
        "      <th>1</th>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
-       "      <td>0.575777</td>\n",
        "      <td>0</td>\n",
        "      <td>-1.114768</td>\n",
        "      <td>20060723</td>\n",
@@ -854,7 +852,6 @@
        "      <th>7</th>\n",
        "      <td>-122.419420</td>\n",
        "      <td>37.774930</td>\n",
-       "      <td>-0.544195</td>\n",
        "      <td>0</td>\n",
        "      <td>4.228540</td>\n",
        "      <td>20061214</td>\n",
@@ -868,7 +865,6 @@
        "      <th>8</th>\n",
        "      <td>-79.791980</td>\n",
        "      <td>36.072640</td>\n",
-       "      <td>-0.565028</td>\n",
        "      <td>2</td>\n",
        "      <td>5.478175</td>\n",
        "      <td>20061217</td>\n",
@@ -882,7 +878,6 @@
        "      <th>9</th>\n",
        "      <td>-121.805790</td>\n",
        "      <td>38.004920</td>\n",
-       "      <td>0.650960</td>\n",
        "      <td>0</td>\n",
        "      <td>-1.652156</td>\n",
        "      <td>20061221</td>\n",
@@ -896,7 +891,6 @@
        "      <th>11</th>\n",
        "      <td>-1.902691</td>\n",
        "      <td>52.479699</td>\n",
-       "      <td>0.670905</td>\n",
        "      <td>0</td>\n",
        "      <td>4.864521</td>\n",
        "      <td>20061231</td>\n",
@@ -910,7 +904,6 @@
        "      <th>12</th>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
-       "      <td>-0.567821</td>\n",
        "      <td>0</td>\n",
        "      <td>15.600876</td>\n",
        "      <td>20070106</td>\n",
@@ -924,7 +917,6 @@
        "      <th>15</th>\n",
        "      <td>-0.125740</td>\n",
        "      <td>51.508530</td>\n",
-       "      <td>-0.531149</td>\n",
        "      <td>0</td>\n",
        "      <td>4.908487</td>\n",
        "      <td>20070108</td>\n",
@@ -938,7 +930,6 @@
        "      <th>21</th>\n",
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
-       "      <td>-0.162596</td>\n",
        "      <td>0</td>\n",
        "      <td>4.598470</td>\n",
        "      <td>20070110</td>\n",
@@ -952,7 +943,6 @@
        "      <th>22</th>\n",
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
-       "      <td>-0.162596</td>\n",
        "      <td>0</td>\n",
        "      <td>4.598470</td>\n",
        "      <td>20070110</td>\n",
@@ -966,7 +956,6 @@
        "      <th>23</th>\n",
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
-       "      <td>0.048920</td>\n",
        "      <td>1</td>\n",
        "      <td>4.702218</td>\n",
        "      <td>20070111</td>\n",
@@ -981,29 +970,29 @@
        "</div>"
       ],
       "text/plain": [
-       "           lng        lat  sentiment  stance  temperature_avg      date  \\\n",
-       "1   -73.949582  40.650104   0.575777       0        -1.114768  20060723   \n",
-       "7  -122.419420  37.774930  -0.544195       0         4.228540  20061214   \n",
-       "8   -79.791980  36.072640  -0.565028       2         5.478175  20061217   \n",
-       "9  -121.805790  38.004920   0.650960       0        -1.652156  20061221   \n",
-       "11   -1.902691  52.479699   0.670905       0         4.864521  20061231   \n",
-       "12  -73.949582  40.650104  -0.567821       0        15.600876  20070106   \n",
-       "15   -0.125740  51.508530  -0.531149       0         4.908487  20070108   \n",
-       "21   -0.127647  51.507322  -0.162596       0         4.598470  20070110   \n",
-       "22   -0.127647  51.507322  -0.162596       0         4.598470  20070110   \n",
-       "23   -0.127647  51.507322   0.048920       1         4.702218  20070111   \n",
+       "           lng        lat  stance  temperature_avg      date  gender_female  \\\n",
+       "1   -73.949582  40.650104       0        -1.114768  20060723              0   \n",
+       "7  -122.419420  37.774930       0         4.228540  20061214              0   \n",
+       "8   -79.791980  36.072640       2         5.478175  20061217              0   \n",
+       "9  -121.805790  38.004920       0        -1.652156  20061221              0   \n",
+       "11   -1.902691  52.479699       0         4.864521  20061231              0   \n",
+       "12  -73.949582  40.650104       0        15.600876  20070106              0   \n",
+       "15   -0.125740  51.508530       0         4.908487  20070108              0   \n",
+       "21   -0.127647  51.507322       0         4.598470  20070110              0   \n",
+       "22   -0.127647  51.507322       0         4.598470  20070110              0   \n",
+       "23   -0.127647  51.507322       1         4.702218  20070111              0   \n",
        "\n",
-       "    gender_female  gender_male  gender_undefined  aggressiveness_aggressive  \\\n",
-       "1               0            0                 1                          1   \n",
-       "7               0            1                 0                          1   \n",
-       "8               0            1                 0                          1   \n",
-       "9               0            1                 0                          0   \n",
-       "11              0            1                 0                          1   \n",
-       "12              0            1                 0                          1   \n",
-       "15              0            0                 1                          1   \n",
-       "21              0            1                 0                          1   \n",
-       "22              0            1                 0                          1   \n",
-       "23              0            1                 0                          0   \n",
+       "    gender_male  gender_undefined  aggressiveness_aggressive  \\\n",
+       "1             0                 1                          1   \n",
+       "7             1                 0                          1   \n",
+       "8             1                 0                          1   \n",
+       "9             1                 0                          0   \n",
+       "11            1                 0                          1   \n",
+       "12            1                 0                          1   \n",
+       "15            0                 1                          1   \n",
+       "21            1                 0                          1   \n",
+       "22            1                 0                          1   \n",
+       "23            1                 0                          0   \n",
        "\n",
        "    aggressiveness_not aggressive  \n",
        "1                               0  \n",
@@ -1088,7 +1077,6 @@
        "      <th></th>\n",
        "      <th>lng</th>\n",
        "      <th>lat</th>\n",
-       "      <th>sentiment</th>\n",
        "      <th>temperature_avg</th>\n",
        "      <th>date</th>\n",
        "      <th>gender_female</th>\n",
@@ -1103,7 +1091,6 @@
        "      <th>1</th>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
-       "      <td>0.575777</td>\n",
        "      <td>-1.114768</td>\n",
        "      <td>20060723</td>\n",
        "      <td>0</td>\n",
@@ -1116,7 +1103,6 @@
        "      <th>7</th>\n",
        "      <td>-122.419420</td>\n",
        "      <td>37.774930</td>\n",
-       "      <td>-0.544195</td>\n",
        "      <td>4.228540</td>\n",
        "      <td>20061214</td>\n",
        "      <td>0</td>\n",
@@ -1129,7 +1115,6 @@
        "      <th>8</th>\n",
        "      <td>-79.791980</td>\n",
        "      <td>36.072640</td>\n",
-       "      <td>-0.565028</td>\n",
        "      <td>5.478175</td>\n",
        "      <td>20061217</td>\n",
        "      <td>0</td>\n",
@@ -1142,7 +1127,6 @@
        "      <th>9</th>\n",
        "      <td>-121.805790</td>\n",
        "      <td>38.004920</td>\n",
-       "      <td>0.650960</td>\n",
        "      <td>-1.652156</td>\n",
        "      <td>20061221</td>\n",
        "      <td>0</td>\n",
@@ -1155,7 +1139,6 @@
        "      <th>11</th>\n",
        "      <td>-1.902691</td>\n",
        "      <td>52.479699</td>\n",
-       "      <td>0.670905</td>\n",
        "      <td>4.864521</td>\n",
        "      <td>20061231</td>\n",
        "      <td>0</td>\n",
@@ -1169,19 +1152,19 @@
        "</div>"
       ],
       "text/plain": [
-       "           lng        lat  sentiment  temperature_avg      date  \\\n",
-       "1   -73.949582  40.650104   0.575777        -1.114768  20060723   \n",
-       "7  -122.419420  37.774930  -0.544195         4.228540  20061214   \n",
-       "8   -79.791980  36.072640  -0.565028         5.478175  20061217   \n",
-       "9  -121.805790  38.004920   0.650960        -1.652156  20061221   \n",
-       "11   -1.902691  52.479699   0.670905         4.864521  20061231   \n",
+       "           lng        lat  temperature_avg      date  gender_female  \\\n",
+       "1   -73.949582  40.650104        -1.114768  20060723              0   \n",
+       "7  -122.419420  37.774930         4.228540  20061214              0   \n",
+       "8   -79.791980  36.072640         5.478175  20061217              0   \n",
+       "9  -121.805790  38.004920        -1.652156  20061221              0   \n",
+       "11   -1.902691  52.479699         4.864521  20061231              0   \n",
        "\n",
-       "    gender_female  gender_male  gender_undefined  aggressiveness_aggressive  \\\n",
-       "1               0            0                 1                          1   \n",
-       "7               0            1                 0                          1   \n",
-       "8               0            1                 0                          1   \n",
-       "9               0            1                 0                          0   \n",
-       "11              0            1                 0                          1   \n",
+       "    gender_male  gender_undefined  aggressiveness_aggressive  \\\n",
+       "1             0                 1                          1   \n",
+       "7             1                 0                          1   \n",
+       "8             1                 0                          1   \n",
+       "9             1                 0                          0   \n",
+       "11            1                 0                          1   \n",
        "\n",
        "    aggressiveness_not aggressive  \n",
        "1                               0  \n",
@@ -1296,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "27d3073e",
    "metadata": {},
    "outputs": [],
@@ -1307,10 +1290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "dd99112a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5008710040015741"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the accuracy score of the model using the testing data\n",
     "acc_score = balanced_accuracy_score(y_test, predictions)\n",
@@ -1319,10 +1313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "829a501d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "          0       0.31      0.45      0.77      0.37      0.59      0.33    248765\n",
+      "          1       0.85      0.52      0.74      0.65      0.62      0.38    986618\n",
+      "          2       0.13      0.53      0.74      0.21      0.63      0.39     91502\n",
+      "\n",
+      "avg / total       0.70      0.51      0.75      0.57      0.62      0.37   1326885\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report of this model\n",
     "print(classification_report_imbalanced(y_test, predictions))"
@@ -1330,12 +1339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "824ea496",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date: (0.3399185722339077)\n",
+      "temperature_avg: (0.23203490900601212)\n",
+      "lng: (0.20795686315416373)\n",
+      "lat: (0.20011269798680761)\n",
+      "aggressiveness_aggressive: (0.005867564873592921)\n",
+      "aggressiveness_not aggressive: (0.005714131221335128)\n",
+      "gender_male: (0.0038743907454482926)\n",
+      "gender_female: (0.00315123449683753)\n",
+      "gender_undefined: (0.0013696362818947847)\n"
+     ]
+    }
+   ],
    "source": [
     "# Sort the features by importance\n",
     "features = sorted(zip(rf_model.feature_importances_, X.columns), reverse=True)\n",
