updates to original ml model

--- a/Supervised ML Model (All Features).ipynb
+++ b/Supervised ML Model (All Features).ipynb
@@ -781,7 +781,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import cleaned dataframe back into PGAdmin"
+    "# Import cleaned dataframe back into PGAdmin\n",
+    "#cc_twitter_date_df = pd.to_sql('climate_change_twitter_cleaned', con=engine)"
    ]
   },
   {
@@ -1590,13 +1591,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "8a115760",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make predictions using the testing data on the trained model\n",
     "predictions = rf_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "01a6100e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "      <th>Predicted 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>137470</td>\n",
+       "      <td>55263</td>\n",
+       "      <td>56032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>159228</td>\n",
+       "      <td>656889</td>\n",
+       "      <td>170501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 2</th>\n",
+       "      <td>15663</td>\n",
+       "      <td>13264</td>\n",
+       "      <td>62575</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Predicted 0  Predicted 1  Predicted 2\n",
+       "Actual 0       137470        55263        56032\n",
+       "Actual 1       159228       656889       170501\n",
+       "Actual 2        15663        13264        62575"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate the confusion matrix\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\", \"Actual 2\"], columns=[\"Predicted 0\", \"Predicted 1\", \"Predicted 2\"])\n",
+    "cm_df"
    ]
   },
   {
